<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/login_root_layout">
  <data/>

  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="0dp"
      android:paddingBottom="0dp"
      android:paddingLeft="24dp"
      android:paddingRight="24dp"
      android:orientation="vertical">

      <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_description"
        android:src="@mipmap/ic_logo"/>

      <!-- Email Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="0dp"
        android:hint="@string/email_hint"
        >

        <android.support.design.widget.TextInputEditText
          android:id="@+id/input_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/email"
          android:inputType="textEmailAddress"
          android:textColor="@color/text_main_dark"/>

      </android.support.design.widget.TextInputLayout>

      <!-- Password Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/password_hint">
        <android.support.design.widget.TextInputEditText
          android:id="@+id/input_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/password_logo"
          android:inputType="textPassword"
          android:textColor="@color/text_main_dark"
          android:textColorHint="@color/text_main_dark"
          android:imeOptions="actionDone"/>

      </android.support.design.widget.TextInputLayout>

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:padding="12dp"
        android:paddingTop="16dp"
        android:background="@color/accent"
        android:text="@string/login"
        android:textColor="@color/textColorDefault"
        android:textColorHint="@color/text_main_light"/>

      <TextView
        android:id="@+id/link_forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="@color/text_secondary_dark"
        android:textSize="16sp"/>

      <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="@color/text_secondary_dark"
        android:textSize="16sp"/>

    </LinearLayout>
  </ScrollView>
</layout>