<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <android.support.constraint.ConstraintLayout
    android:id="@+id/forgot_pass_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordActivity">
    <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
...
